changed config file headers

--- a/templates/etc/dnf/automatic.conf.j2
+++ b/templates/etc/dnf/automatic.conf.j2
@@ -1,4 +1,4 @@
-# dnf-automatic configuration - Managed by Ansible, please do not edit manually.
+# dnf-automatic configuration
 # vim: ft=conf
 #
 # {{ ansible_managed }}
