--- a/templates/etc/yum/yum-cron.conf.j2
+++ b/templates/etc/yum/yum-cron.conf.j2
@@ -1,4 +1,4 @@
-# yum-cron configuration - Managed by Ansible, please do not edit manually.
+# yum-cron configuration
 # vim: ft=conf
 #
 # {{ ansible_managed }}
