--- a/templates/etc/apt/apt.conf.d/50unattended-upgrades.j2
+++ b/templates/etc/apt/apt.conf.d/50unattended-upgrades.j2
@@ -1,4 +1,4 @@
-# 50unattended-upgrades - Managed by Ansible, please do not edit manually.
+# 50unattended-upgrades
 # vim: ft=conf
 #
 # {{ ansible_managed }}
